# rust_arduino_nano_every

./: .gitignore  Cargo.toml
firmware/: Cargo.toml  avr-atmega4809.json  avr_none_spec.json  valid_avr.json
firmware/.cargo/: config.toml
firmware/src/: ak09918.rs  icm20600.rs  main.rs
host/: Cargo.toml
host/src/: madgwick.rs  main.rs  serial.rs  visualization.rs
neec_lib/include/: pinout.h
neec_lib/lib/gpio/: gpio.cpp  gpio.h
neec_lib/lib/i2c/: i2c.cpp  i2c.h
neec_lib/lib/imu/: imu.cpp  imu.h
neec_lib/lib/motor/: motor.cpp  motor.h
neec_lib/lib/servomotor/: servomotor.cpp  servomotor.h
neec_lib/lib/speaker/: speaker.cpp  speaker.h
neec_lib/lib/ultrasonic/: ultrasonic.cpp  ultrasonic.h
neec_lib/lib/vector3/: vector3.cpp  vector3.h
neec_lib/lib/vendor_chainableled/: ChainableLED.cpp  version.txt
neec_lib/lib/vendor_servo/: version.txt
neec_lib/src/: main.cpp
