[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "0.2.0"
embedded-hal = "0.2.7" 
nb = "1.1.0"

[dependencies.avr-oxide]
version = "0.4.2"
features = ["atmega4809", "16mhz"]

[dependencies.oxide-macros]
version = "0.4.2"

[target.'cfg(target_arch = "avr")']
runner = "ravedude nano-every -P COM6" # COMxは実際のポート